--- a/CurrentTime.fsproj
+++ b/CurrentTime.fsproj
@@ -15,4 +15,8 @@
       <Content Include="Dockerfile" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Humanizer" Version="2.14.1" />
+    </ItemGroup>
+
 </Project>
